--- a/memory.html
+++ b/memory.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory</title>
+    <link rel="stylesheet" type="text/css" href="memory.css">
 </head>
 <body>
-    
+    <script src="memory.js"></script>
 </body>
 </html>
