ajout d un titre , un paragraphe pour le score et un bouton de depart

--- a/memory.html
+++ b/memory.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" type="text/css" href="memory.css">
 </head>
 <body>
+    <h1>Le jeu Memory</h1>
+    <p>Score: <span class="score"></span></p>
+    <button onclick="restart()">Restart</button>
     <script src="memory.js"></script>
 </body>
 </html>
