--- a/memory.html
+++ b/memory.html
@@ -10,7 +10,9 @@
 <body>
     <h1>Le jeu Memory</h1>
     <p>Score: <span class="score"></span></p>
+    <div class="actions">
     <button onclick="restart()">Restart</button>
+</div>
     <script src="memory.js"></script>
 </body>
 </html>
