--- a/memory.html
+++ b/memory.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="memory.css">
 </head>
 <body>
-    <h1>Le jeu Memory</h1>
+    <h1>Memory</h1>
     <p>Score: <span class="score"></span></p>
     <div class="actions">
     <button onclick="restart()">Restart</button>
