--- a/memory.html
+++ b/memory.html
@@ -9,10 +9,12 @@
 </head>
 <body>
     <h1>Memory</h1>
+    <div class="grid-container">
+    </div>
     <p>Score: <span class="score"></span></p>
     <div class="actions">
     <button onclick="restart()">Restart</button>
-</div>
+    </div>
     <script src="memory.js"></script>
 </body>
 </html>
