--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory</title>
-    <link rel="stylesheet" type="text/css" href="memory.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <h1>Memory</h1>
@@ -15,6 +15,6 @@
     <div class="actions">
     <button onclick="restart()">Restart</button>
     </div>
-    <script src="memory.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
