commentaires  sur l API

--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
     <title>Memory</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="shortcut icon" type="image/png" sizes="16x16" href="assets/favicon.png"/>
+
 </head>
 <body>
     <h1>Memory</h1>
     <div class="grid-container">
+        <script src="data/cards.json"></script>
     </div>
     <p>Score: <span class="score"></span></p>
     <div class="actions">
-    <button onclick="restart()">Restart</button>
+        <button onclick="restart()">Restart</button>
     </div>
     <script src="index.js"></script>
+
+
 </body>
 </html>
